deploy/generated/gateway/authenticated/i-a-m-directory-service-authenticated.yaml
# Code generated by protoc-gen-go-deploy. DO NOT EDIT.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: i-a-m-directory-service-authenticated
  namespace: aisphere
  labels:
    app.kubernetes.io/name: aisphere-iam
    app.kubernetes.io/component: gateway-route
    aisphere.io/generated-by: protoc-gen-go-deploy
    aisphere.io/exposure-bucket: authenticated
spec:
  parentRefs:
    - name: authenticated-gateway
      namespace: aisphere-system
  rules:
    - matches:
        - method: GET
          path:
            type: PathPrefix
            value: /v1/iam/orgs
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Aisphere-Route-Exposure
                value: AUTHORIZED
              - name: X-Aisphere-Route-Authn-Mode
                value: verify_jwt
              - name: X-Aisphere-Route-Forward-Authorization
                value: "true"
      backendRefs:
        - name: aisphere-iam
          namespace: aisphere
          port: 19080
