deploy/generated/gateway/authenticated/i-a-m-permission-service-authenticated.yaml
# Code generated by protoc-gen-go-deploy. DO NOT EDIT.
# Source service: iam.v1.IAMPermissionService
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: i-a-m-permission-service-authenticated
  namespace: "aisphere"
  labels:
    app.kubernetes.io/name: "aisphere-iam"
    app.kubernetes.io/component: "gateway-route"
    aisphere.io/generated-by: "protoc-gen-go-deploy"
    aisphere.io/exposure-bucket: "authenticated"
spec:
  parentRefs:
    - name: "aisphere-gateway"
      namespace: "aisphere-system"
  rules:
    - matches:
        - method: "POST"
          path:
            type: PathPrefix
            value: "/v1/iam/relationships"
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Aisphere-Upstream-Operation
                value: "/iam.v1.IAMPermissionService/WriteRelationship"
              - name: X-Aisphere-Route-Exposure
                value: "AUTHORIZED"
              - name: X-Aisphere-Route-Authn-Mode
                value: "verify_jwt"
              - name: X-Aisphere-Authz-Action
                value: "write"
              - name: X-Aisphere-Authz-Resource
                value: "iam:relationship"
      backendRefs:
        - name: "aisphere-iam"
          namespace: "aisphere"
          port: 18080
    - matches:
        - method: "POST"
          path:
            type: PathPrefix
            value: "/v1/iam/relationships/delete"
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Aisphere-Upstream-Operation
                value: "/iam.v1.IAMPermissionService/DeleteRelationship"
              - name: X-Aisphere-Route-Exposure
                value: "AUTHORIZED"
              - name: X-Aisphere-Route-Authn-Mode
                value: "verify_jwt"
              - name: X-Aisphere-Authz-Action
                value: "delete"
              - name: X-Aisphere-Authz-Resource
                value: "iam:relationship"
      backendRefs:
        - name: "aisphere-iam"
          namespace: "aisphere"
          port: 18080
